--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$support_lib_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.github.wandersnail:commons:1.0.1'
     implementation project(':library')
 }
