--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/library_release.kotlin_module'
+    }
 }
 
 dependencies {
@@ -24,6 +27,6 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$support_lib_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.github.wandersnail:commons:1.0.1'
+    implementation 'com.github.wandersnail:commons:1.0.3'
     implementation project(':library')
 }
