--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdkVersion Integer.parseInt(COMPILE_SDK_VERSION)
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion Integer.parseInt(MIN_SDK_VERSION)
+        targetSdkVersion Integer.parseInt(TARGET_SDK_VERSION)
         applicationId "cn.zfs.widgetdemo"
         versionCode 1
         versionName "1.0"
@@ -27,6 +27,6 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$support_lib_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.github.wandersnail:commons:1.0.3'
+    implementation 'com.github.wandersnail:commons:1.1.2'
     implementation project(':library')
 }
