--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext {
-        compileSdkVersion = 28
-        minSdkVersion = 19
-        targetSdkVersion = 28
-
-        kotlin_version = '1.3.11'
-        support_lib_version = '28.0.0'
-        lib_version = '1.0.2'
-    }
+    ext.kotlin_version = '1.3.11'
 
     repositories {
         google()
