--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,9 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+COMPILE_SDK_VERSION=28
+MIN_SDK_VERSION=21
+TARGET_SDK_VERSION=28
+
+support_lib_version=28.0.0
