优化横向文本选择器

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".RotatableTextViewActivity"/>
         <activity android:name=".SwitchButtonActivity"/>
+        <activity android:name=".HorizontalLabelPickerActivity"/>
     </application>
 
 </manifest>
