新增可拖拽item列表帮助类

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".RotatableTextViewActivity"/>
         <activity android:name=".SwitchButtonActivity"/>
         <activity android:name=".HorizontalLabelPickerActivity"/>
+        <activity android:name=".DragSwipeItemActivity"/>
     </application>
 
 </manifest>
