完成刻度尺自动对齐到刻度线

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -24,6 +25,9 @@
         <activity android:name=".SwitchButtonActivity"/>
         <activity android:name=".HorizontalLabelPickerActivity"/>
         <activity android:name=".DragSwipeItemActivity"/>
+        <activity android:name=".RoundButtonActivity"/>
+        <activity android:name=".RoundImageActivity"/>
+        <activity android:name=".ScaleViewActivity"/>
     </application>
 
 </manifest>
