增加对话框示例

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".RoundImageActivity"/>
         <activity android:name=".ScaleViewActivity"/>
         <activity android:name=".StringPickerActivity"/>
+        <activity android:name=".DefaultAlertDialogActivity"/>
     </application>
 
 </manifest>
