--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".ScaleViewActivity"/>
         <activity android:name=".StringPickerActivity"/>
         <activity android:name=".DefaultAlertDialogActivity"/>
+        <activity android:name=".RejectFastClickActivity"/>
     </application>
 
 </manifest>
