--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.novoda:bintray-release:0.9'
+        classpath 'com.novoda:bintray-release:0.9.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -28,15 +28,29 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
-        maven { url 'https://dl.bintray.com/wandersnail/android' }
+        mavenCentral()
+        maven { url 'https://dl.bintray.com/wandersnail/androidx' }
     }
     // 指定编码
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
     }
     tasks.withType(Javadoc).all {
-        enabled = false
+        options {
+            encoding "UTF-8"
+            charSet 'UTF-8'
+        }
+        options.addStringOption('Xdoclint:none', '-quiet')
+    }
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+
+        kotlinOptions {
+            jvmTarget = '1.8'
+            apiVersion = '1.3'
+            languageVersion = '1.3'
+        }
     }
 }
 
