试验可折叠

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".StringPickerActivity"/>
         <activity android:name=".DefaultAlertDialogActivity"/>
         <activity android:name=".RejectFastClickActivity"/>
+        <activity android:name=".ExpandableViewActivity"/>
     </application>
 
 </manifest>
