--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'cn.wandersnail:common-full:1.0.8'
+    implementation 'cn.wandersnail:commons-android:1.2.4'
     implementation project(':library')
 }
