--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,15 @@ buildscript {
         minSdkVersion = 21
         targetSdkVersion = 28
 
-        kotlin_version = '1.3.71'
-        appcompat_version = '1.1.0'
+        kotlin_version = '1.4.32'
+        appcompat_version = '1.2.0'
         recyclerview_version = '1.1.0'
     }
 
     repositories {
         google()
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        jcenter()
+//        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
@@ -29,9 +29,9 @@ allprojects {
     repositories {
         google()
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        jcenter()
+        maven { url 'https://jitpack.io' }
+//        jcenter()
         mavenCentral()
-        maven { url 'https://dl.bintray.com/wandersnail/androidx' }
     }
     // 指定编码
     tasks.withType(JavaCompile) {
