--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
@@ -6,18 +8,18 @@ buildscript {
         minSdkVersion = 21
         targetSdkVersion = 30
 
-        kotlin_version = '1.5.0'
-        appcompat_version = '1.2.0'
-        recyclerview_version = '1.1.0'
+        kotlin_version = '1.8.10'
+        appcompat_version = '1.4.1'
+        recyclerview_version = '1.2.1'
     }
 
     repositories {
         google()
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-//        jcenter()
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,34 +29,31 @@ buildscript {
 allprojects {
     repositories {
         google()
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'https://jitpack.io' }
-//        jcenter()
         mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://jitpack.io' }
     }
     // 指定编码
-    tasks.withType(JavaCompile) {
+    tasks.withType(JavaCompile).configureEach {
         options.encoding = "UTF-8"
     }
-    tasks.withType(Javadoc).all {
+    tasks.withType(Javadoc).configureEach {
         options {
             encoding "UTF-8"
             charSet 'UTF-8'
         }
         options.addStringOption('Xdoclint:none', '-quiet')
     }
-    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    tasks.withType(KotlinCompile).configureEach {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
 
         kotlinOptions {
             jvmTarget = '1.8'
-            apiVersion = '1.3'
-            languageVersion = '1.3'
         }
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
