--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,14 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
 }
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdk rootProject.ext.minSdkVersion
+        targetSdk rootProject.ext.targetSdkVersion
         applicationId "cn.zfs.widgetdemo"
         versionCode 1
         versionName "1.0"
@@ -34,6 +35,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'cn.wandersnail:commons-android:1.3.8'
+    implementation 'cn.wandersnail:commons-android:1.3.8@aar'
     implementation project(':library')
 }
